--- a/client-ntwa/index.html
+++ b/client-ntwa/index.html
@@ -21,8 +21,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Note Taking Web App</title>
   </head>
-  <body class="flex flex-col justify-center items-center dark:bg-black">
-    <div id="root"></div>
+  <body class="flex flex-col justify-center items-center w-full dark:bg-black">
+    <div id="root" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
