--- a/client-ntwa/index.html
+++ b/client-ntwa/index.html
@@ -21,7 +21,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Note Taking Web App</title>
   </head>
-  <body class="flex flex-col justify-center items-center w-full bg-neutral-100 dark:bg-black">
+  <body class="flex flex-col justify-center items-center bg-white dark:bg-black">
     <div id="root" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
